syntax = "proto3";

package internal;

option go_package = "user_pb/";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message CreateUserResponse {
  string user_id = 1;
}
